--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@mantine/hooks": "^7.10.2",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tabler/icons-react": "^3.22.0",
     "@tanstack/react-query": "^5.39.0",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
-    "@trpc/server": "next",
+    "@trpc/server": "^11.0.0-rc.648",
+    "axios": "^1.7.8",
     "geist": "^1.3.0",
     "next": "^14.2.1",
     "next-auth": "^4.24.7",
